<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:text="@string/led_title" />

	<TableRow>
		<Button
			android:id="@+id/nfcblueledon"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_blue_led_on"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/nfcblueledoff"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_blue_led_off"
			android:textSize="10pt"        
		/> 
 	</TableRow>   
	<TableRow>
		<Button
			android:id="@+id/nfcgreenledon"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_green_led_on"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/nfcgreenledoff"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_green_led_off"
			android:textSize="10pt"        
		/> 
 	</TableRow> 	 
   	<TableRow>
		<Button
			android:id="@+id/nfcredledon"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_red_led_on"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/nfcredledoff"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_red_led_off"
			android:textSize="10pt"        
		/> 
 	</TableRow> 
   	<TableRow>
		<Button
			android:id="@+id/nfcyellowledon"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_yellow_led_on"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/nfcyellowledoff"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nfc_yellow_led_off"
			android:textSize="10pt"        
		/> 
 	</TableRow> 
 
   	<TableRow>
		<Button
			android:id="@+id/redledon"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/red_led_on"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/redledoff"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/red_led_off"
			android:textSize="10pt"        
		/> 
 	</TableRow> 
 	
   	<TableRow>
		<Button
			android:id="@+id/greenledon"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/green_led_on"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/greenledoff"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/green_led_off"
			android:textSize="10pt"        
		/> 
 	</TableRow> 
 	
   	<TableRow>
		<Button
			android:id="@+id/cameraledon"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/camera_led_on"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/cameraledoff"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/camera_led_off"
			android:textSize="10pt"        
		/> 
 	</TableRow> 
   	<TableRow>
		<Button
			android:id="@+id/turnonall"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/turn_on_all"
			android:textSize="10pt"        
		/> 
		<Button
			android:id="@+id/turnoffall"        
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/turn_off_all"
			android:textSize="10pt"        
		/> 
 	</TableRow>  	   	
   		
</TableLayout>