<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvMifareCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/tvCardEventMifare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvMifareCard" />

    <TextView
        android:id="@+id/tvLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMifareCard" />
   

    <TableLayout
        android:id="@+id/tbNFC1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLog"
        android:orientation="horizontal" >

        <TableRow>

            <Button
                android:id="@+id/btnContactlessOpen"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@+string/open_reader" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tbNFC2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbNFC1"
        android:orientation="horizontal" >

        <TableRow>

            <Button
                android:id="@+id/btnSearchBegin"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/search_target_begin" />

            <Button
                android:id="@+id/btnSearchStop"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/search_target_stop" />
        </TableRow>
    </TableLayout>

   

    <TableLayout
        android:id="@+id/tbNFC4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbNFC2"
        android:orientation="horizontal" >

        <TableRow>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/verify_card" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tbNFC5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbNFC4"
        android:orientation="horizontal" >

        <TableRow>

            <Button
                android:id="@+id/btnWriteMifare"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/write_mifare_card" />

            <EditText
                android:id="@+id/etWriteMifare"
                android:layout_width="500sp"
                android:layout_height="wrap_content"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="Please input data"
                android:maxLength="32" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btnReadMifare"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/read_mifare_card" />
            <TextView
                android:id="@+id/etReadMifare"
                android:layout_width="500sp"
                android:layout_height="wrap_content" />
        </TableRow>
        
        <TableRow> 
            <Button
                android:id="@+id/btnContactlessClose"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@+string/close_reader" />
        </TableRow>
                    
    </TableLayout>

</RelativeLayout>